--- a/vendas/templates/vendas/home.html
+++ b/vendas/templates/vendas/home.html
@@ -36,7 +36,7 @@
   <div class="container-fluid">
     <div class="d-flex align-items-center gap-3">
       <button class="btn btn-outline-light btn-sm d-lg-none" id="toggleSidebar">☰</button>
-      <a class="navbar-brand fw-bold" href="{% url 'home' %}">Loja Digital</a>
+      <a class="navbar-brand fw-bold" href="{% url 'home' %}">YARIN IMPRESSÕES E PERSONALIZAÇÃO</a>
     </div>
     
     {% url 'sales_report' as sales_url %}
