--- a/vendas/templates/vendas/report.html
+++ b/vendas/templates/vendas/report.html
@@ -41,7 +41,7 @@
 
 <nav class="navbar nav-lite navbar-dark">
   <div class="container d-flex align-items-center gap-3">
-    <a class="navbar-brand fw-bold" href="{% url 'home' %}">YARIN IMPRESSÕES E PERSONALIZAÇÃO</a>
+    <a class="navbar-brand fw-bold" href="{% url 'home' %}">YLA Criativa</a>
     <div class="ms-auto d-none d-md-flex align-items-center gap-3">
       {% if user.is_authenticated %}
         {% if user.is_staff %}<a class="link-light text-decoration-none" href="{% url 'sales_report' %}">Relatório</a>{% endif %}
