--- a/vendas/templates/vendas/home_public.html
+++ b/vendas/templates/vendas/home_public.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8" />
-  <title>Produtos • {{ company.trade_name|default:company.corporate_name|default:"Loja Digital" }}</title>
+  <title>Produtos • {{ company.trade_name|default:company.corporate_name|default:"YLA Criativa" }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
