--- a/vendas/templates/vendas/orders_list.html
+++ b/vendas/templates/vendas/orders_list.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-dark" style="background:linear-gradient(90deg,#0b1020,#111a3a);">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="{% url 'home' %}">YARIN IMPRESSÕES E PERSONALIZAÇÃOS</a>
+    <a class="navbar-brand fw-bold" href="{% url 'home' %}">YLA Criativa</a>
     <div class="d-flex gap-2">
       <a class="btn btn-outline-light btn-sm" href="{% url 'home' %}">Catálogo</a>
       <a class="btn btn-outline-light btn-sm" href="{% url 'orders_list' %}">Pedidos</a>
