--- a/vendas/templates/vendas/pending.html
+++ b/vendas/templates/vendas/pending.html
@@ -23,7 +23,7 @@
 <body>
 <nav class="navbar nav-lite navbar-dark">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'home' %}">Loja Digital</a>
+    <a class="navbar-brand" href="{% url 'home' %}">YLA Criativa</a>
   </div>
 </nav>
 
